--- a/todo-app/views/index.ejs
+++ b/todo-app/views/index.ejs
@@ -3,16 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="csrfToken" content="<%= csrfToken %>" />
     <title>Todo App</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/css/styles.css" />
     <script>
+      var token = document.querySelector('meta[name="csrfToken"]').getAttribute("content");
       function toggleCompleted(id) {
         fetch(`/todos/${id}/markAsCompleted`, {
           method: "PUT",
           headers: {
             "Content-Type": "application/json",
           },
+          body: JSON.stringify({
+            _csrf: token,
+          }),
         })
           .then((res) => {
             if (res.ok) {
@@ -27,6 +32,9 @@
           headers: {
             "Content-Type": "application/json",
           },
+          body: JSON.stringify({
+            _csrf: token,
+          }),
         })
           .then((res) => {
             if (res.ok) {
@@ -42,6 +50,7 @@
       <div class="col-start-3 col-span-2">
         <%- include('header') %>
         <form action="/todos" method="post">
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
           <div class="flex gap-2 py-4">
             <div class="flex-auto">
               <input
